Renaming fragment_remedio.xml to fragment_medicine.xml

--- a/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_remedio.xml
@@ -31,7 +31,7 @@
     </RelativeLayout>
 
     <include
-        layout="@layout/fragment_remedio"
+        layout="@layout/fragment_medicine"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/panelInfosSuperior"></include>
