--- a/TemRemedioAi/app/src/main/res/layout/activity_main.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <include
-            android:id="@+id/id_toolbar"
+            android:id="@+id/toolbar"
             layout="@layout/app_toolbar" />
 
         <android.support.design.widget.TabLayout
