--- a/TemRemedioAi/app/src/main/res/layout/fragment_main.xml
+++ b/TemRemedioAi/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:id="@+id/fragment_main"
     tools:context="com.gppmds.tra.temremdioa.controller.MainActivity$PlaceholderFragment">
 
 
