--- a/TemRemedioAi/app/src/main/res/layout/card_list_medicine.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_medicine.xml
@@ -47,7 +47,8 @@
                 android:id="@+id/imageViewArrow"
                 android:padding="8dp"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/ic_keyboard_arrow_down" />
+                android:background="@drawable/ic_keyboard_arrow_down"
+                android:clickable="true"/>
 
         </RelativeLayout>
 
