--- a/TemRemedioAi/app/src/main/res/layout/activity_select_medicine.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_select_medicine.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gppmds.tra.temremdioa.controller.SelectRemedioActivity">
+    tools:context="com.gppmds.tra.temremdioa.controller.SelectMedicineActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
