--- a/TemRemedioAi/app/src/main/res/layout/activity_about.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_about.xml
@@ -11,7 +11,7 @@
     tools:context="com.gppmds.tra.temremdioa.controller.AboutActivity">
 
     <ImageView
-        android:id="@+id/imageViewTRA"
+        android:id="@+id/imageView2"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_column="0"
@@ -25,7 +25,7 @@
         android:layout_marginTop="38dp" />
 
     <TextView
-        android:text="@string/appName"
+        android:text="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
@@ -33,13 +33,13 @@
         android:textSize="18dp"
         android:paddingBottom="1dp"
         android:paddingTop="8dp"
-        android:id="@+id/textViewAppName"
-        android:layout_below="@+id/imageViewTRA"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/imageView2"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
 
     <TextView
-        android:text="@string/appVersion"
+        android:text="@string/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
@@ -47,13 +47,13 @@
         android:paddingBottom="1dp"
         android:paddingTop="1dp"
         android:textSize="14dp"
-        android:id="@+id/textViewAppVersion"
+        android:id="@+id/textView4"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textViewAppName"
+        android:layout_below="@+id/textView3"
         android:layout_centerVertical="true"/>
 
     <ImageView
-        android:id="@+id/imageViewInfoIcon"
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
@@ -68,21 +68,21 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/dscAbout"
+        android:text="@string/dsc_about"
         android:textAppearance="?android:textAppearanceLarge"
         android:textColor="#000000"
         android:textSize="14dp"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:id="@+id/textViewDscInfo"
+        android:id="@+id/textView2"
         android:layout_marginLeft="5dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageViewInfoIcon"
+        android:layout_below="@+id/imageView"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true" />
 
     <TextView
-        android:text="@string/titleAbout"
+        android:text="@string/about"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
@@ -91,8 +91,8 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:id="@+id/textView"
-        android:layout_below="@+id/textViewAppVersion"
-        android:layout_toEndOf="@+id/imageViewInfoIcon"
+        android:layout_below="@+id/textView4"
+        android:layout_toEndOf="@+id/imageView"
         android:layout_marginTop="44dp" />
 
 
