--- a/TemRemedioAi/app/src/main/res/layout/activity_about.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_about.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="38dp" />
 
     <TextView
-        android:text="@string/app_name"
+        android:text="@string/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
