--- a/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_ubs_maps.xml
@@ -56,15 +56,6 @@
                         android:layout_height="match_parent">
 
                         <ImageView
-                            android:id="@+id/imageViewTRA2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/ic_action_phone"
-                            android:layout_below="@+id/imageViewLineDivider3"
-                            android:layout_toStartOf="@+id/textViewPhoneUbs" />
-
-                        <ImageView
                             android:id="@+id/imageViewTRA"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -139,8 +130,7 @@
                             android:layout_toEndOf="@id/imageViewTRA"
                             android:textSize="15dp"
                             android:autoLink="phone"
-                            android:textColorLink="#3d6aff"
-                            android:text="r" />
+                            android:textColorLink="#3d6aff"/>
 
                     </RelativeLayout>
 
