--- a/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
@@ -85,6 +85,14 @@
                 android:textColor="@color/colorAccent"
                 android:backgroundTint="@color/colorPrimary"/>
 
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/log_in_button_facebook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
