--- a/TemRemedioAi/app/src/main/res/layout/card_list_ubs.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_ubs.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/textViewUbsNeighborhood"
                 android:textColor="@color/colorSecondText"
                 android:textSize="14sp"
+                android:layout_marginTop="8dp"
                 android:text="@string/ubs_neighborhood"
                 android:layout_below="@id/textViewUbsName" />
 
@@ -54,7 +55,7 @@
             android:id="@+id/expandable"
             android:layout_below="@id/header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="120dp">
 
             <!--<ImageView
                 android:layout_width="wrap_content"
@@ -71,8 +72,8 @@
                 android:id="@+id/textViewUbsCity"
                 android:textSize="14sp"
                 android:text="@string/ubs_city"
-                android:layout_marginTop="24dp"
-                android:layout_marginLeft="24dp"/>
+                android:layout_marginTop="1dp"
+                android:layout_marginLeft="180dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -82,7 +83,7 @@
                 android:textSize="14sp"
                 android:text="@string/ubs_attention_level"
                 android:layout_marginTop="4dp"
-                android:layout_marginLeft="24dp"
+                android:layout_marginLeft="180dp"
                 android:layout_below="@id/textViewUbsCity"/>
 
             <Button
@@ -93,7 +94,7 @@
                 android:layout_alignParentEnd="false"
                 android:minWidth="88dp"
                 android:minHeight="54dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:textColor="@color/colorPrimaryText"
@@ -109,7 +110,7 @@
                 android:id="@id/buttonUbsDescription"
                 android:minWidth="88dp"
                 android:minHeight="54dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:textColor="@color/colorPrimaryText"
@@ -126,14 +127,14 @@
                 android:layout_alignParentEnd="false"
                 android:minWidth="88dp"
                 android:minHeight="54dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:textColor="@color/colorPrimaryText"
                 android:singleLine="false"
                 android:elevation="0dp"
-                android:layout_below="@+id/textViewNivelAtencaoUBS"
-                android:layout_toLeftOf="@+id/buttonVisualizarDescricaoUBS" />
+                android:layout_below="@id/textViewUbsAttentionLevel"
+                android:layout_toLeftOf="@+id/buttonUbsDescription" />
         </RelativeLayout>
     </RelativeLayout>
 
