--- a/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
+++ b/TemRemedioAi/app/src/main/res/layout/activity_log_in.xml
@@ -85,6 +85,15 @@
                 android:textColor="@color/colorAccent"
                 android:backgroundTint="@color/colorPrimary"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/info"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:textSize="18sp"
+                />
+
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_button_fb"
                 android:layout_width="wrap_content"
